--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "GraphCool + Typescript signup loggedInUser and authentication ",
   "main": "index.js",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^10.12.8",
+    "@types/validator": "^9.4.3",
     "bcryptjs": "^2.4.3",
     "graphcool-lib": "^0.1.4",
     "validator": "^9.0.0"
