--- a/.graphcoolrc
+++ b/.graphcoolrc
@@ -1,3 +1,3 @@
 targets:
-  LoginRegister: shared-eu-west-1/cjogubb5c2xio018483ms7e2i
-  default: LoginRegister
+  LoginRegisterUser: shared-eu-west-1/cjogubb5c2xio018483ms7e2i
+  default: LoginRegisterUser
