--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "loginregistergraphql",
   "version": "1.0.0",
-  "description": "GraphCool + Typescript signup loggedInUser and authentication ",
+  "description": "GraphCool + Typescript signup, loggedInUser, updatePasswordEmail and authentication",
   "main": "index.js",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^10.12.8",
-    "@types/validator": "^9.4.3",
+    "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.1.0",
     "graphcool-lib": "^0.1.4",
     "validator": "^9.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^10.12.9",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/crypto-js": "^3.1.43",
+    "@types/validator": "^9.4.3"
+  },
   "scripts": {
     "test": "graphcool console"
   },
