--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^6.1.0",
     "graphcool-lib": "^0.1.4",
     "loadsh": "0.0.3",
+    "randomstring": "^1.1.5",
     "validator": "^9.0.0"
   },
   "devDependencies": {
