--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.1.0",
     "graphcool-lib": "^0.1.4",
-    "loadsh": "0.0.3",
+    "graphql-request": "^1.8.2",
     "randomstring": "^1.1.5",
     "validator": "^9.0.0"
   },
