--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
+    "crypto-random-string": "^1.0.0",
     "dotenv": "^6.1.0",
     "graphcool-lib": "^0.1.4",
     "graphql-request": "^1.8.2",
