--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^6.1.0",
     "graphcool-lib": "^0.1.4",
     "graphql-request": "^1.8.2",
+    "moment": "^2.22.2",
     "randomstring": "^1.1.5",
     "validator": "^9.0.0"
   },
