--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
   "main": "index.js",
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "@types/dotenv": "^6.1.0",
     "bcryptjs": "^2.4.3",
     "crypto-random-string": "^1.0.0",
     "dotenv": "^6.1.0",
     "graphcool-lib": "^0.1.4",
-    "graphql-request": "^1.8.2",
     "moment": "^2.22.2",
-    "randomstring": "^1.1.5",
     "validator": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^10.12.9",
     "@types/bcryptjs": "^2.4.2",
-    "@types/crypto-js": "^3.1.43",
+    "@types/crypto-random-string": "^1.0.0",
+    "@types/node": "^10.12.9",
     "@types/validator": "^9.4.3"
   },
   "scripts": {
