--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     /* Strict Type-Checking Options */
     "strict": true,
     /* Enable all strict type-checking options. */
-    "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */ ,
+    "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */ ,
     "skipLibCheck": true,
     /* This will skip lib ( node modules ) check */
     // "strictNullChecks": true,              /* Enable strict null checks. */
@@ -42,7 +42,7 @@
     // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-    "typeRoots": ["./code/tsmodules/"],
+    "typeRoots": ["./src/tsmodules/"],
     /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,
