--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "crypto-random-string": "^1.0.0",
     "dotenv": "^6.1.0",
     "graphcool-lib": "^0.1.4",
-    "graphql-request": "^1.8.2",
     "moment": "^2.22.2",
-    "randomstring": "^1.1.5",
     "validator": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^10.12.9",
     "@types/bcryptjs": "^2.4.2",
-    "@types/crypto-js": "^3.1.43",
+    "@types/crypto-random-string": "^1.0.0",
+    "@types/dotenv": "^6.1.0",
+    "@types/node": "^10.12.9",
     "@types/validator": "^9.4.3"
   },
   "scripts": {
