--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
-    "@types/dotenv": "^6.1.0",
     "bcryptjs": "^2.4.3",
     "crypto-random-string": "^1.0.0",
     "dotenv": "^6.1.0",
@@ -16,12 +15,13 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/crypto-random-string": "^1.0.0",
+    "@types/dotenv": "^6.1.0",
     "@types/node": "^10.12.9",
     "@types/validator": "^9.4.3"
   },
   "scripts": {
     "test": "graphcool console",
-    "lint": "tslint 'src/**/*.{ts,tsx}'"
+    "lint": "tslint 'src/**/*.{ts}'"
   },
   "author": "Anuj",
   "license": "ISC"
